syntax = "proto3";

package hawk;

option java_package = "hawk";
option java_outer_classname = "Items";

import "google/protobuf/empty.proto";

enum ItemType {
  SMALL = 0;
  MEDIUM = 1;
  LARGE = 2;
}

message ItemDetails {
  ItemType type = 1;
  string name = 2;
  string description = 3;
}

message Item {
  int64 id = 1;
  ItemDetails details = 2;
}

message AddItemRequest {
  ItemDetails itemDetails = 1;
}

message AddItemResponse {
  Item item = 1;
}

message GetItemsResponse {
  repeated Item items = 1;
}

message GetItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  int64 id = 1;
}

message GetItemRequest {
  int64 id = 1;
}

message GetItemByNameRequest{
  string name = 1;
  string description = 2;
}

message GetItemBySearchTextRequest {
  string text = 1;
}

service ItemService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse) {
  }
  rpc GetItems(google.protobuf.Empty) returns (GetItemsResponse){
  }
  rpc GetItem(GetItemRequest) returns (GetItemResponse){
  }
  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty){
  }
  rpc GetByNameOrDescription(GetItemByNameRequest) returns (GetItemsResponse){
  }
  rpc GetByNameContainingOrDescriptionContaining(GetItemByNameRequest) returns (GetItemsResponse){
  }
  rpc GetItemBySearchText(GetItemBySearchTextRequest) returns (GetItemsResponse){
  }
}
